--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,9 @@
 <plugin>
 			<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.15</version>
+  		
+        
         <configuration>
           <testFailureIgnore>true</testFailureIgnore>
         </configuration>
