--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,11 @@
 				<version>5.0.8</version>
 			</dependency>
 			
-			
+			<dependency>
+      			<groupId>com.googlecode.jeeunit</groupId>
+      			<artifactId>jeeunit-concurrent</artifactId>
+      			<version>0.9.0</version>
+    		</dependency> 
 			
 			
 			
