tests2 also chenged

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,9 @@
         
         <configuration>
           <testFailureIgnore>true</testFailureIgnore>
+          <parallel>classes</parallel>
+
+		  <threadCount>3</threadCount>
         </configuration>
       </plugin>
       
